fix some mistakes

--- a/components/Popup/Popup.module.scss
+++ b/components/Popup/Popup.module.scss
@@ -1,50 +1,65 @@
 .popup {
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  z-index: 10;
-  max-width: inherit;
-  background: rgba(61, 61, 81, 0.4);
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-end;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 10;
+    max-width: inherit;
+    background: rgba(61, 61, 81, 0.4);
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
 
-  &.over {
-    z-index: 20;
-  }
-
-  &.closing {
-    background: transparent;
-    .inner {
-      animation: hideDown 0.25s ease;
+    &.over {
+        z-index: 20;
     }
-  }
 
-  .inner {
-    width: 100%;
+    &.closing {
+        background: transparent;
+        .inner {
+            animation: hideDown 0.25s ease;
+        }
+    }
 
-    animation: showUp 0.25s ease;
-  }
+    .inner {
+        position: relative;
+        width: 100%;
+
+        animation: showUp 0.25s ease;
+
+        .brow {
+            position: absolute;
+            content: '';
+            z-index: 1;
+            top: 15px;
+            left: 0;
+            right: 0;
+            margin: 0 auto;
+            background-color: var(--color-bledny-grey);
+            width: 54px;
+            height: 6px;
+            border-radius: 3px;
+        }
+    }
 }
 
 @keyframes showUp {
-  from {
-    top: 100%;
-  }
-  to {
-    top: 0;
-  }
+    from {
+        top: 100%;
+    }
+    to {
+        top: 0;
+    }
 }
 
 @keyframes hideDown {
-  from {
-    top: 0;
-  }
-  to {
-    top: 100%;
-  }
+    from {
+        top: 0;
+    }
+    to {
+        top: 100%;
+    }
 }
