--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -120,7 +120,7 @@
 
         width: max-content;
 
-        transition: transform 0.2s ease;
+        transition: all 0.2s ease;
         transform: translate3d(0, 0, 0);
     }
 
