--- a/app/settings/page.module.scss
+++ b/app/settings/page.module.scss
@@ -1,139 +1,146 @@
 .title {
-  text-align: center;
+    text-align: center;
 }
 
 .banner {
-  --color-white: #ffffff;
-  --color-bledny-blue: #dae7fa;
+    --color-white: #ffffff;
+    --color-bledny-blue: #dae7fa;
 
-  position: relative;
-  padding: 30px 15px 20px 15px;
-  overflow: hidden;
-  border-radius: 20px;
-  color: var(--color-white);
-
-  transition: opacity 0.25s ease;
-
-  &.closing {
-    opacity: 0;
-  }
-
-  > *:not(.bg) {
     position: relative;
-  }
-
-  .bg {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    top: 0;
-
-    background: radial-gradient(34.86% 107.21% at 97.7% 54.03%, rgba(0, 255, 251, 0.7) 0%, rgba(0, 122, 255, 0) 100%),
-      radial-gradient(61.37% 61.37% at 45.14% 100%, rgba(140, 0, 255, 0.7) 0%, rgba(0, 122, 255, 0) 100%), #007aff;
-
-    .logo {
-      position: absolute;
-      top: -59px;
-      right: -82px;
-    }
-
-    .tg {
-      position: absolute;
-      top: -53px;
-      right: -109px;
-    }
-  }
-
-  .title {
-    text-align: left;
+    padding: 30px 15px 20px 15px;
+    overflow: hidden;
+    border-radius: 20px;
     color: var(--color-white);
-    max-width: 65%;
-  }
 
-  .text {
-    margin-top: 10px;
-    color: var(--color-bledny-blue);
-    text-wrap: balance;
-    max-width: 70%;
-  }
+    transition: opacity 0.25s ease;
+    -webkit-transition: -webkit-opacity 0.25s ease;
+    -moz-transition: opacity 0.25s ease;
+    -o-transition: opacity 0.25s ease;
 
-  .btn {
-    margin-top: 15px;
-    background-color: var(--color-bledny-blue);
-    color: var(--color-blue);
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    padding: 16px 32.5px;
-    border-radius: 20px;
-  }
-}
+    &.closing {
+        opacity: 0;
+    }
 
-.settings {
-  margin: 0 10px;
-  margin-top: 30px;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  margin-bottom: var(--spacing-bottom);
+    > *:not(.bg) {
+        position: relative;
+    }
 
-  .list {
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
-    background-color: var(--color-white);
-    border-radius: 20px;
-    padding: 15px;
-    box-shadow: 0px 12px 120px rgba(132, 139, 147, 0.12);
+    .bg {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        top: 0;
 
-    .item {
-      position: relative;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
+        background: radial-gradient(
+                34.86% 107.21% at 97.7% 54.03%,
+                rgba(0, 255, 251, 0.7) 0%,
+                rgba(0, 122, 255, 0) 100%
+            ),
+            radial-gradient(61.37% 61.37% at 45.14% 100%, rgba(140, 0, 255, 0.7) 0%, rgba(0, 122, 255, 0) 100%), #007aff;
 
-      &:not(:last-of-type) {
-        &::before {
-          position: absolute;
-          content: '';
-          bottom: -15px;
-          left: 0;
-          right: 0;
-          height: 1px;
-          background-color: var(--color-category-border);
-          border-radius: 1px;
+        .logo {
+            position: absolute;
+            top: -59px;
+            right: -82px;
         }
-      }
 
-      .info {
+        .tg {
+            position: absolute;
+            top: -53px;
+            right: -109px;
+        }
+    }
+
+    .title {
+        text-align: left;
+        color: var(--color-white);
+        max-width: 65%;
+    }
+
+    .text {
+        margin-top: 10px;
+        color: var(--color-bledny-blue);
+        text-wrap: balance;
+        max-width: 70%;
+    }
+
+    .btn {
+        margin-top: 15px;
+        background-color: var(--color-bledny-blue);
+        color: var(--color-blue);
         display: flex;
         align-items: center;
         gap: 10px;
-
-        .icon {
-          padding: 5px;
-          border-radius: 10px;
-
-          &.blue {
-            background-color: var(--color-bledny-blue);
-          }
-
-          &.orange {
-            background-color: var(--color-bledny-orange);
-          }
-
-          &.red {
-            background-color: var(--color-bledny-red);
-          }
-        }
-      }
-
-      .arrow {
-        background-color: var(--color-bledny-blue);
-        padding: 6px 8px;
-        border-radius: 5px;
-      }
+        padding: 16px 32.5px;
+        border-radius: 20px;
     }
-  }
+}
+
+.settings {
+    margin: 0 10px;
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-bottom: var(--spacing-bottom);
+
+    .list {
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
+        background-color: var(--color-white);
+        border-radius: 20px;
+        padding: 15px;
+        box-shadow: 0px 12px 120px rgba(132, 139, 147, 0.12);
+
+        .item {
+            position: relative;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+
+            &:not(:last-of-type) {
+                &::before {
+                    position: absolute;
+                    content: '';
+                    bottom: -15px;
+                    left: 0;
+                    right: 0;
+                    height: 1px;
+                    background-color: var(--color-category-border);
+                    border-radius: 1px;
+                }
+            }
+
+            .info {
+                display: flex;
+                align-items: center;
+                gap: 10px;
+
+                .icon {
+                    padding: 5px;
+                    border-radius: 10px;
+
+                    &.blue {
+                        background-color: var(--color-bledny-blue);
+                    }
+
+                    &.orange {
+                        background-color: var(--color-bledny-orange);
+                    }
+
+                    &.red {
+                        background-color: var(--color-bledny-red);
+                    }
+                }
+            }
+
+            .arrow {
+                background-color: var(--color-bledny-blue);
+                padding: 6px 8px;
+                border-radius: 5px;
+            }
+        }
+    }
 }
