--- a/components/SelectCategory/SelectCategory.module.scss
+++ b/components/SelectCategory/SelectCategory.module.scss
@@ -1,103 +1,106 @@
 .list {
-  margin-top: 30px;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  background-color: var(--color-white);
-  width: 100%;
-  padding: 5px;
-  border-radius: 20px;
-  max-height: 375px;
-
-  overflow-y: auto;
-
-  &::-webkit-scrollbar {
-    width: 0;
-    height: 0;
-    display: none;
-  }
-
-  .item {
-    position: relative;
+    margin-top: 30px;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-    border-radius: 18px;
-    padding: 10px;
-    cursor: pointer;
-
-    transition: all 0.1s ease;
-
-    &:not(:last-of-type) {
-      &::before {
-        position: absolute;
-        content: '';
-        bottom: -5px;
-        left: 10px;
-        right: 10px;
-        height: 1px;
-        background-color: var(--color-category-border);
-        border-radius: 1px;
-      }
-    }
-
-    &:active {
-      background-color: var(--bg-color);
-    }
-
-    .check {
-      visibility: hidden;
-    }
-
-    &.active {
-      .check {
-        visibility: visible;
-      }
-    }
-  }
-
-  .category {
-    display: flex;
-    align-items: center;
+    flex-direction: column;
     gap: 10px;
-  }
+    background-color: var(--color-white);
+    width: 100%;
+    padding: 5px;
+    border-radius: 20px;
+    max-height: 375px;
+
+    overflow-y: auto;
+
+    &::-webkit-scrollbar {
+        width: 0;
+        height: 0;
+        display: none;
+    }
+
+    .item {
+        position: relative;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        border-radius: 18px;
+        padding: 10px;
+        cursor: pointer;
+
+        transition: background-color 0.1s ease;
+        -webkit-transition: background-color 0.1s ease;
+        -moz-transition: background-color 0.1s ease;
+        -o-transition: background-color 0.1s ease;
+
+        &:not(:last-of-type) {
+            &::before {
+                position: absolute;
+                content: '';
+                bottom: -5px;
+                left: 10px;
+                right: 10px;
+                height: 1px;
+                background-color: var(--color-category-border);
+                border-radius: 1px;
+            }
+        }
+
+        &:active {
+            background-color: var(--bg-color);
+        }
+
+        .check {
+            visibility: hidden;
+        }
+
+        &.active {
+            .check {
+                visibility: visible;
+            }
+        }
+    }
+
+    .category {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+    }
 }
 
 .categories {
-  padding: 0 10px;
-  padding-top: 47px;
-  padding-bottom: 8px;
-  position: relative;
-  top: 0;
-  background-color: var(--bg-color);
-  border-radius: 20px 20px 0 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+    padding: 0 10px;
+    padding-top: 47px;
+    padding-bottom: 8px;
+    position: relative;
+    top: 0;
+    background-color: var(--bg-color);
+    border-radius: 20px 20px 0 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
-  animation: inherit;
+    animation: inherit;
 
-  animation: inherit;
+    animation: inherit;
 }
 
 .icon {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .btn {
-  --color-white: #ffffff;
-  margin-top: 10px;
-  margin-bottom: 8px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 10px;
-  background-color: var(--color-blue);
-  color: var(--color-white);
-  border-radius: 20px;
-  padding: 21.5px;
-  width: 100%;
+    --color-white: #ffffff;
+    margin-top: 10px;
+    margin-bottom: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    background-color: var(--color-blue);
+    color: var(--color-white);
+    border-radius: 20px;
+    padding: 21.5px;
+    width: 100%;
 }
