--- a/components/Switch/Switch.module.scss
+++ b/components/Switch/Switch.module.scss
@@ -9,7 +9,10 @@
 
     box-shadow: inset 0px 2px 2px rgba(61, 61, 81, 0.24);
 
-    transition: all 0.15s ease;
+    transition: background-color 0.15s ease;
+    -webkit-transition: background-color 0.15s ease;
+    -moz-transition: background-color 0.15s ease;
+    -o-transition: background-color 0.15s ease;
 
     &.active {
         background-color: var(--color-blue);
@@ -36,6 +39,9 @@
         box-shadow: 0px 2px 2px rgba(61, 61, 81, 0.12);
         border-radius: 50%;
 
-        transition: all 0.15s ease;
+        transition: margin 0.15s ease;
+        -webkit-transition: margin 0.15s ease;
+        -moz-transition: margin 0.15s ease;
+        -o-transition: margin 0.15s ease;
     }
 }
