--- a/app/settings/page.module.scss
+++ b/app/settings/page.module.scss
@@ -88,10 +88,10 @@
     .list {
         display: flex;
         flex-direction: column;
-        gap: 30px;
+        gap: 10px;
         background-color: var(--color-white);
         border-radius: 20px;
-        padding: 15px;
+        padding: 5px;
         box-shadow: 0px 12px 120px rgba(132, 139, 147, 0.12);
 
         .item {
@@ -99,14 +99,15 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
+            padding: 10px;
 
-            &:not(:last-of-type) {
+            &:not(:last-child) {
                 &::before {
                     position: absolute;
                     content: '';
-                    bottom: -15px;
-                    left: 0;
-                    right: 0;
+                    bottom: -5px;
+                    left: 10px;
+                    right: 10px;
                     height: 1px;
                     background-color: var(--color-category-border);
                     border-radius: 1px;
@@ -114,6 +115,8 @@
             }
 
             .info {
+                position: relative;
+                z-index: 1;
                 display: flex;
                 align-items: center;
                 gap: 10px;
@@ -140,6 +143,15 @@
                 background-color: var(--color-bledny-blue);
                 padding: 6px 8px;
                 border-radius: 5px;
+
+                &::before {
+                    position: absolute;
+                    content: '';
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 100%;
+                }
             }
         }
     }
