--- a/components/Switch/Switch.module.scss
+++ b/components/Switch/Switch.module.scss
@@ -14,6 +14,15 @@
     -moz-transition: background-color 0.15s ease;
     -o-transition: background-color 0.15s ease;
 
+    &::before {
+        position: absolute;
+        content: '';
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
+
     &.active {
         background-color: var(--color-blue);
 
